--- a/styles/components/page/Product/_ProductFilterResponsive.scss
+++ b/styles/components/page/Product/_ProductFilterResponsive.scss
@@ -27,12 +27,14 @@
 	.iosFix {
 		@supports (-webkit-touch-callout: none) {
 			position: relative;
-			bottom: 7.5rem;
+			bottom: 9rem;
 			background-color: #F0F2F2;
 		}
 	}
 	.paddingFix {
-		padding-bottom: 8rem;
+		@supports (-webkit-touch-callout: none) {
+			padding-bottom: 9rem;
+		}
 	}
 	.buttons {
 		.n-btn {
@@ -152,9 +154,6 @@
 	.product_filter_responsive_modal {
 		width: 100%;
 		height: calc(100% - 130px);
-		// padding-bottom: 8rem;
-		// position: absolute;
-		// top: ;
 		overflow: auto;
 		background: #fff;
 		transition: all 0.3s;
@@ -162,6 +161,12 @@
 		-moz-transition: all 0.3s;
 		-ms-transition: all 0.3s;
 		-o-transition: all 0.3s;
+		.webkitHeightFix {
+			@supports (-webkit-touch-callout: none) {
+				height: 100vh !important;
+				height: calc(var(--vh, 1vh) * 100) !important;
+			}
+		}
 		.search_field {
 			width: 100%;
 			border-radius: 1000px;
